Tue Apr 12 10:37:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: VC doesn't have ftruncate() and others, but
	  ruby needs HAVE_ macros to use our emulation functions.
	  (fix the problem of 31262)

Tue Apr 12 01:33:00 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: properly evaluate existence of truncate, ftruncate
	  and ftello for MinGW. [ruby-core:35678]
	* win32/win32.c: rename truncate, ftruncate and ftello to avoid 
	  redefinitions.
	* win32/win32.h: ditto.

Mon Apr 11 21:51:52 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c: revert r31230.

Mon Apr 11 21:49:18 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_io.rb: Added TestIO#test_cross_thread_close_stdio
	  and TestIO#test_cross_thread_close_fd.
	  The patch was written by Eric Wong. [ruby-core:35669]

Mon Apr 11 21:15:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* file.c (rb_group_member): kill 256K of stack usage.
	  the patch was written by Eric Wong. [ruby-core:35699]

Mon Apr 11 07:24:13 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl.c:  Fix typo, document version constants.

Sun Apr 10 22:23:45 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h: parenthesize macro arguments.

Sat Apr  9 23:31:47 2011  Shota Fukumori  <sorah@tubusu.net>

	* ext/stringio/stringio.c (strio_each, strio_readlines):
	  Use `NUM2LONG` instead of `FIX2INT`. Fixes [ruby-dev:43395].

Sat Apr  9 23:22:27 2011  Shota Fukumori  <sorah@tubusu.net>

	* ext/stringio/stringio.c (strio_each):
	  Fix exception message and don't raise immediately if block is not given.
	  Fixes [ruby-dev:43394].

	* test/stringio/test_stringio.rb (test_each_line_limit_0):
	  Fix test for above.

Sat Apr  9 21:54:15 2011  Shota Fukumori  <sorah@tubusu.net>

	* ext/stringio/stringio.c (strio_each, strio_readlines):
	  limit must not be zero. Fixes [ruby-dev:43392].

	* test/stringio/test_stringio.rb: Add tests for above.
