@@ -1,3 +1,8 @@
+Tue Apr 12 18:07:13 2011  TAKAO Kouji  <kouji@takao7.net>
+
+	* ext/readline/extconf.rb: --disable-libedit to disable
+	  libedit. fixes #4550
+
 Tue Apr 12 10:37:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* include/ruby/win32.h: VC doesn't have ftruncate() and others, but
